--- a/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/tr/LC_MESSAGES/XionHDF.po
+++ b/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/tr/LC_MESSAGES/XionHDF.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: XionHDF\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-05-06 23:16+0200\n"
-"PO-Revision-Date: 2023-03-26 10:49+0200\n"
+"PO-Revision-Date: 2023-06-05 18:12+0200\n"
 "Last-Translator: Hasan Kiran <sunder67@hotmail.com>\n"
 "Language-Team: Turkish <sunder67@hotmail.com>\n"
 "Language: tr\n"
@@ -647,9 +647,9 @@ msgid "No Update!"
 msgstr "Güncelleme yok!"
 
 msgid "update at your own risk!"
-msgstr "Güncelleme kendi sorumluluğunuzdadır!"
+msgstr "Günc elleme kendi sorumluluğunuzdadır!"
 
-msgid "Its recommend to create a Fullbackup before update!"
+msgid "Its  ed to create a Fullbackup before update!"
 msgstr "Güncellemeden önce bir tam yedek yapılması önerilir!"
 
 msgid "XionHDF - Configuration tool"
